# livetv

./: .gitignore  docker-compose.yml
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/api/: cache_headers.py  filters.py  serializers.py  tests.py  urls.py  views.py
backend/catalog/: admin.py  admin_actions.py  apps.py  cache.py  deactivation.py  field_limits.py  grouping.py  models.py  normalize.py  notifications.py  probe.py  signals.py  stream_urls.py  sync.py  tasks.py  view_counts.py
backend/catalog/migrations/: 0001_initial.py  0002_alter_catalogchannel_options_and_more.py  0003_catalogchannel_failure_count.py  0004_inactivecatalogchannel_catalogchannel_deactivated_at_and_more.py  0005_dead_link_deactivation_reason.py  0006_catalogchannel_group_key.py  0007_group_key_name_only.py  0008_catalogchannel_view_count.py  0009_widen_catalogchannel_text_fields.py  0010_sync_model_state.py
backend/catalog/tests/: test_admin.py  test_purge_channels.py  test_sync.py  test_view_counts.py
backend/config/: celery.py  log_extra.py  logging.py  middleware.py  settings.py  urls.py
backend/config/tests/: test_logging.py
backend/health/: chunking.py  stream_health.py  stream_probe.py  tasks.py  tests.py
backend/matches/: admin.py  apps.py  cache.py  fifa_schedule.py  grouping.py  models.py  notifications.py  signals.py  status_sync.py  tasks.py
backend/releases/: admin.py  apk_files.py  apps.py  cache.py  forms.py  media_urls.py  models.py  pubspec.py  services.py  tests.py  tests_publish.py  views.py
backend/scripts/: entrypoint.sh
(+163 files in other folders)
