[project]
name = "backend"
version = "0.1.0"
description = "Live TV metadata API — Django + DRF + Admin"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-import-export>=4.4.1",
    "django-redis>=7.0.0",
    "djangorestframework>=3.17.1",
    "gunicorn>=26.0.0",
    "psycopg>=3.3.4",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "requests>=2.34.2",
]
